<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.FighterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="486dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="243dp">

            <ImageView
                android:id="@+id/image_view_fighter_detail"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.398">

                <TextView
                    android:id="@+id/text_view_striking_title"
                    style="@style/HeaderTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/striking_title"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533">

                <TextView
                    android:id="@+id/text_view_slpm_title"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_slpm" />


                <TextView
                    android:id="@+id/text_view_fighter_detail_slpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="13-0"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65">

                <TextView
                    android:id="@+id/text_view_strk_acc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_strk_acc" />


                <TextView
                    android:id="@+id/text_view_fighter_detail_strk_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="5'10&quot;"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.765">

                <TextView
                    android:id="@+id/text_title_sapm_title"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_sapm" />

                <TextView
                    android:id="@+id/text_view_fighter_detail_sapm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.991">

                <TextView
                    android:id="@+id/text_title_strk_def_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_strk_def" />

                <TextView
                    android:id="@+id/text_view_fighter_detail_strk_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="70&quot;"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/linearLayout5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.398">

                <TextView
                    android:id="@+id/text_view_grappling_title"
                    style="@style/HeaderTextStyle"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/grappling_title"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                <TextView
                    android:id="@+id/text_title_td_avg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_td_avg" />

                <TextView
                    android:id="@+id/text_view_fighter_detail_td_avg"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="11dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                <TextView
                    android:id="@+id/text_title_td_acc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_td_acc" />

                <TextView
                    android:id="@+id/text_view_fighter_detail_td_acc"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="11dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

                <TextView
                    android:id="@+id/text_title_td_def_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_td_def" />

                <TextView
                    android:id="@+id/text_view_fighter_detail_td_def"
                    android:layout_width="57dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.89">

                <TextView
                    android:id="@+id/text_title_sub_avg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fighter_sub_avg" />

                <TextView
                    android:id="@+id/text_view_fighter_detail_sub_avg"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />

            </LinearLayout>

            <Button
                android:id="@+id/fighter_activity_flip_btn"
                android:layout_width="48dp"
                android:layout_height="43dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hand_icon_flip_back"
                android:padding="20dp"
                android:src="@drawable/hand_icon_flip_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <Button
                android:id="@+id/fighter_detail_activity_legend_btn"
                android:layout_width="87dp"
                android:layout_height="41dp"
                android:layout_gravity="bottom|left"
                android:layout_marginBottom="9dp"
                android:layout_marginEnd="37dp"
                android:layout_marginLeft="63dp"
                android:layout_marginRight="37dp"
                android:layout_marginStart="63dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary"
                android:padding="13dp"
                android:text="@string/legend_btn"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/fighter_activity_flip_btn"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>






</android.support.constraint.ConstraintLayout>